<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/idPBLoading"
        android:visibility="gone"
        android:layout_centerInParent = "true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/idRLHome"
        >
        <ImageView
            android:contentDescription="@string/app_name"
            android:src="@color/black_shade_1"
            android:id="@+id/idIVBack"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_name"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:padding="20dp"
            android:textSize="18sp"
            android:id="@+id/idTVCityName"
            />
        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/idLLEdt"
            android:layout_below="@id/idTVCityName"
            android:weightSum="5"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/idTILCity"
                android:layout_margin="10dp"
                android:layout_weight="4.5"
                android:background="@android:color/transparent"
                android:hint="@string/enter_city_name"
                android:padding="5dp"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/idEdtCity"
                    android:importantForAccessibility="no"
                    android:textColorHint="@color/white"
                    android:importantForAutofill="no"
                    android:background="@android:color/transparent"
                    />
                </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/idTVSearch"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_search"
                app:tint="@color/white"
                android:contentDescription="@string/searchCityName" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idTvVTemperature"
            android:layout_below="@id/idLLEdt"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="23"
            android:textColor="@color/white"
            android:textSize="70dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idTVIcon"
            android:layout_below="@+id/idTvVTemperature"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_launcher"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idTVCondition"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/condition"
            android:textColor="@color/white"
            android:layout_below="@+id/idTVIcon"
            />
        <TextView
            android:text="@string/today_s_weather_forecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/idRvWeather"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idRvWeather"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>